--- a/root/etc/dnsmasq.conf
+++ b/root/etc/dnsmasq.conf
@@ -37,3 +37,6 @@ conf-file=/etc/dnsmasq.blacklist
 
 # Include all files in the mountable volume
 conf-dir=/config,*.conf
+
+# make it work in Resin
+bind-interfaces
